# after-market-agent

./: .env.example  .gitignore  Agents.md  README.md  TASKS.md  after_market_agent.db  alembic.ini  package.json  pyproject.toml
.github/workflows/: daily-brief.yml
alembic/: README  env.py
alembic/versions/: 0001_init.py  0002_add_source_item_clustering_fields.py  0003_add_cluster_summaries.py  0004_add_openai_summary_fields.py  0005_add_pipeline_run_metadata.py
backend/app/: main.py
backend/app/api/routes/: admin.py  clusters.py  digests.py  health.py  jobs.py  pipelines.py  summaries.py  watchlists.py
backend/app/core/: config.py  db.py
backend/app/models/: __init__.py  base.py  cluster_summary.py  digest.py  pipeline_run.py  source_item.py  story_cluster.py  watchlist.py
backend/app/pipelines/: news_pipeline.py
backend/app/schemas/: clusters.py  digests.py  pipelines.py  watchlists.py
backend/app/services/: watchlist_service.py
backend/evals/: __init__.py  evaluation_runner.py  schemas.py
backend/evals/fixtures/: core_eval_fixture.json
backend/scripts/: run_daily_brief.py  seed_watchlist.py  smoke_check.py
backend/tests/: test_clustering.py  test_db_models.py  test_delivery.py  test_digests.py  test_external_ingestion.py  test_frontend.py  test_health.py  test_news_ingestion.py  test_observability_admin.py  test_openai_summarization.py  test_ranking.py  test_summarization.py  test_watchlists.py
docs/: ARCHITECTURE.md  EVALUATION.md  PRODUCT_SPEC.md  PROMPT_CONTRACTS.md  example_digest.md
frontend/: app.js  index.html  styles.css
(+35 files in other folders)
